Add another article explaining the nuts and bolts

--- a/translations/ja.json
+++ b/translations/ja.json
@@ -121,6 +121,10 @@
       "text": "PCMag: Vibe Coding Fiasco: AI Agent Goes Rogue, Deletes Company's Entire Database",
       "url": "https://www.pcmag.com/news/vibe-coding-fiasco-replite-ai-agent-goes-rogue-deletes-company-database",
       "note": "英文"
+    },
+    {
+      "text": "Stephen Wolfram: What Is ChatGPT Doing and Why Does It Work?",
+      "url": "https://writings.stephenwolfram.com/2023/02/what-is-chatgpt-doing-and-why-does-it-work/"
     }
   ]
 }
