--- a/translations/ru.json
+++ b/translations/ru.json
@@ -111,6 +111,10 @@
     {
       "text": "PCMag: Vibe Coding Fiasco: AI Agent Goes Rogue, Deletes Company's Entire Database",
       "url": "https://www.pcmag.com/news/vibe-coding-fiasco-replite-ai-agent-goes-rogue-deletes-company-database"
+    },
+    {
+      "text": "Что делает ChatGPT... и почему это работает?",
+      "url": "https://habr.com/ru/articles/739014/"
     }
   ]
 }
