--- a/translations/en.json
+++ b/translations/en.json
@@ -111,6 +111,11 @@
     {
       "text": "PCMag: Vibe Coding Fiasco: AI Agent Goes Rogue, Deletes Company’s Entire Database",
       "url": "https://www.pcmag.com/news/vibe-coding-fiasco-replite-ai-agent-goes-rogue-deletes-company-database"
+    },
+    {
+      "text": "Stephen Wolfram: What Is ChatGPT Doing and Why Does It Work?",
+      "url": "https://writings.stephenwolfram.com/2023/02/what-is-chatgpt-doing-and-why-does-it-work/"
     }
+
   ]
 }
