--- a/translations/fr.json
+++ b/translations/fr.json
@@ -115,6 +115,10 @@
     {
       "text": "The Conversation : Quand l'IA fait n'importe quoi, le cas du gratte-ciel et du trombone à coulisse",
       "url": "https://theconversation.com/quand-lia-fait-nimporte-quoi-le-cas-du-gratte-ciel-et-du-trombone-a-coulisse-268033"
+    },
+    {
+      "text": "Stephen Wolfram: What Is ChatGPT Doing and Why Does It Work?",
+      "url": "https://writings.stephenwolfram.com/2023/02/what-is-chatgpt-doing-and-why-does-it-work/"
     }
   ]
 }
