--- a/translations/zh-CN.json
+++ b/translations/zh-CN.json
@@ -115,6 +115,10 @@
     {
       "text": "PCMag：氛围编程惨案：AI 代理失控，删除公司整个数据库",
       "url": "https://www.pcmag.com/news/vibe-coding-fiasco-replite-ai-agent-goes-rogue-deletes-company-database"
+    },
+    {
+      "text": "Stephen Wolfram: What Is ChatGPT Doing and Why Does It Work?",
+      "url": "https://writings.stephenwolfram.com/2023/02/what-is-chatgpt-doing-and-why-does-it-work/"
     }
   ]
 }
