--- a/translations/ru.json
+++ b/translations/ru.json
@@ -15,35 +15,35 @@
     "Perplexity"
   ],
   "strings": {
-    "meta_title": "Хватит ссылаться на ИИ",
+    "meta_title": "Коначайте ссылаться на ИИ",
     "meta_description": "Ответ на «Но ChatGPT сказал…»",
     "og_image_alt": "A robot and speech bubble with a 'ban' circle-slash over it and the text 'But ChatGPT said'",
     "twitter_description": "Ответ на «Но ChatGPT сказал…»",
     "twitter_image_alt": "A robot and speech bubble with a 'ban' circle-slash over it and the text 'But ChatGPT said…'",
     "toggle_theme_label": "Переключить между светлой и тёмной темой",
     "but_ai_said": "«Но {ai} сказал…»",
-    "sent_here_because": "Вас отправили сюда, потому что вы сослались на <mark>ИИ</mark> как на источник, чтобы что-то доказать.",
+    "sent_here_because": "Вас отправили сюда, потому что вы, пытаясь что-то доказать, сослались на <mark>ИИ</mark> как на источник.",
     "not_facts_heading": "Ответы больших языковых моделей, таких как ChatGPT, Claude или Gemini, не являются фактами.",
-    "not_facts_p1": "Они предсказывают, какие слова с наибольшей вероятностью появятся следующими в последовательности.",
-    "not_facts_p2": "Они могут генерировать убедительно звучащую информацию, но эта информация может быть неточной или ненадёжной.",
+    "not_facts_p1": "Они предсказывают, какие слова с наибольшей вероятностью появятся в тексте следующими.",
+    "not_facts_p2": "Они могут генерировать убедительно звучащую информацию — но эта информация может быть неточной или ненадёжной.",
     "imagine_heading": "Представьте человека, который прочитал тысячи книг, но не помнит, где что прочитал.",
     "good_at_label": "В чём они могут быть <mark>хороши</mark>?",
     "bad_at_label": "В чём они могут быть <mark class=\"no\">плохи</mark>?",
     "example_prompt_label": "Пример запроса",
     "good_prompts": [
-      "Помоги мне провести мозговой штурм по этому поводу?",
-      "Какие общие закономерности есть в этом?",
-      "Изложи кратко следующее",
-      "Как получше сформулировать это?"
+      "Помоги мне провести мозговой штурм по этой теме",
+      "Какие здесь могут быть общие закономерности?",
+      "Кратко изложи следующее",
+      "Как это получше сформулировать?"
     ],
     "bad_prompts": [
-      "Скажи мне, в какой день это произошло",
-      "Что мне делать дальше по этому поводу?",
-      "Это утверждение правда?",
-      "Какой юридический прецедент для этого?"
+      "Скажи мне, когда произошло это событие",
+      "Каковы мои дальнейшие действия после того, как произошло то-то и то-то?",
+      "Истинно ли это утверждение?",
+      "Какой у этого юридический прецедент?"
     ],
-    "might_get_answer": "Конечно, вы <em>можете</em> получить правильный ответ или хороший совет… но какие «книги» он «вспоминает», давая этот ответ? Этот ответ или совет — это распространённое сочетание слов, а не факт.",
-    "dont_copy_paste_heading": "Не копируйте и не вставляйте то, что сказал чат-бот, и не отправляйте это кому-то как авторитетное мнение.",
+    "might_get_answer": "Конечно, вы <em>можете</em> получить правильный ответ или хороший совет… но какие «книги» он «вспоминает», давая этот ответ? Этот ответ или совет — не факт, а всего лишь распространённое сочетание слов.",
+    "dont_copy_paste_heading": "Не копируйте то, что сказал чат-бот, и не отправляйте это кому-то как авторитетное мнение.",
     "dont_copy_paste_p1": "Когда вы это делаете, вы по сути говорите: «вот куча слов, которые часто встречаются вместе в предложении».",
     "dont_copy_paste_p2": "Иногда это может быть полезно или проницательно. Но это не <strong>истина</strong>, и уж точно не последнее слово в каком-либо вопросе.",
     "further_reading_heading": "Дополнительная информация:",
@@ -58,7 +58,7 @@
     "github_stars_format": "★ {count} звёзд на GitHub",
     "select_language_label": "Выберите язык",
     "clipboard_alert": "Ссылка скопирована в буфер обмена!",
-    "share_title": "Хватит ссылаться на ИИ",
+    "share_title": "Кончайте ссылаться на ИИ",
     "share_text": "Ответ на «Но ChatGPT сказал…»"
   },
   "further_reading": [
